added behaviorCount to display in dashboard. - which originally in csv, beaviorCount... please... English spelling.... Removed default sort order in find common modal popup table

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -89,6 +89,7 @@
 							<th data-sortable = "true"  data-visible="true"  data-field="V3_Reason">V3 Reason</th>
 							<th data-sortable = "true"  data-visible="false" data-field="VirusTotal_Result">VirusTotal Result</th>
 							<th data-sortable = "true"  data-visible="false" data-field="VirusTotal_Reason">VirusTotal Reason</th>
+							<th data-sortable = "true"  data-visible="false" data-align="right" data-field="Behavior_Count">Behavior Count</th>
 						</tr>
 					</thead>
 				</table>
