Added Tickcount to filelistTable, fetching from col_behavior(MDPMongoDB.behavior_PE)

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -278,6 +278,11 @@
 							<th 
 							    data-sortable="true"  
 							    data-visible="true"  
+							    data-field="TICKCOUNT" 
+							    data-align="right">Tick Count</th>
+							<th 
+							    data-sortable="true"  
+							    data-visible="true"  
 							    data-field="SIGN_CREDIT" 
 							    data-align="right">Credit</th>
 							<th 
