[Internal] - Bootstraptable Library Upgrade 1.9.1 -> 1.10.1
[XMLView]
- [imp] ability to change column
- [imp] save current state to cookie (not applied to column orders)
- [imp] divide MED_MDPFLAG into separate li item
- [imp] add <hr> before detectFile[i]

[Dashboard]
- [imp] Send To Analysis opens to new window

[Analysis]
- RemoveAll before FindCommon

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -710,7 +710,7 @@ window.filelistTableMD5Events = {
 
 $('#filelistTable-findCommon').on('click', function() {
 
-	$('#findcommonTable').bootstrapTable('destroy').bootstrapTable();
+	$('#findcommonTable').bootstrapTable('removeAll');
     var md5array = $.map($("#filelistTable").bootstrapTable('getSelections'), function (row) {
         return row.MD5_KEY;
     });
