--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -96,7 +96,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<form id="md5listForm" method="POST" action="/analysis/md5list/" style="display:none;">
+			<form target="_blank" id="md5listForm" method="POST" action="/analysis/md5list/" style="display:none;">
 				<!-- <input name="md5listField" type="hidden" id="md5listField"> -->
 			</form>
 		</div>
