--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap-slate.min.css">
 	
-	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap-table.min.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap-table.1.9.1.min.css">
 	<link rel="stylesheet" type="text/css" href="/static/dragtable/dragtable.css">
 	
 	<link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
@@ -52,7 +52,7 @@
 
 	<script src="/static/js/d3.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
-	<script src="/static/js/bootstrap-table.min.js"></script>
+	<script src="/static/js/bootstrap-table.js"></script>
 	<script src="/static/js/moment.min.js"></script>
 	<script src="/static/js/daterangepicker.js"></script>
 	<script src="/static/js/bootstrap-select.min.js"></script>
